fixed responsive view issue, added macd histogram, added request parameter query feature

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main-container">
-        <div id="plot" class="plot price-and-indicators"></div>
+        <div id="plot" class="plot price"></div>
         <div id="plotMACD" class="plot macd"></div>
         <div id="plotRSI" class="plot rsi"></div>
     </div>
